continue rename in makefiles; install target; convenience links
lib prefix on s2cxl library;
fix install modes and dependencies, add convenience man page links in doc/makefile;
"make install" target in cdecl/makefile;
add convenience links to "install" target of scrt/makefile, scsc/makefile;
isolate example makefile snippets for compiling X programs;
fix seriously strange "all" target construct in xlib/makefile;
invoke s2ch when needed in xlib build;
add "install" target to xlib/makefile;
use consistent pattern in all install targets.

--- a/cdecl/makefile
+++ b/cdecl/makefile
@@ -1,3 +1,15 @@
+prefix=/usr/local
+LIBDIR=${prefix}/lib
+BINDIR=${prefix}/bin
+LIBSUBDIR=scheme2c
+DOCDIR=$(prefix)/doc/scheme2c
+MANDIR=$(prefix)/man
+
+INSTALL = install
+INSTALL_DATA = ${INSTALL} -m 644
+INSTALL_PROGRAM = ${INSTALL}
+INSTALL_SCRIPT = ${INSTALL}
+
 .SUFFIXES:
 .SUFFIXES: .sc .c
 
@@ -23,6 +35,11 @@ s2csizeof:	sizeof.c
 
 s2ch: sch.sc
 	${SCC} -o $@ $^
+
+install: s2ch s2cdecl
+	${INSTALL} -d ${DESTDIR}${BINDIR}
+	${INSTALL_PROGRAM} s2ch s2cdecl ${DESTDIR}${BINDIR}/
+	ln -sf s2ch ${DESTDIR}${BINDIR}/sch
 
 clean:
 	rm -f *.o *.CKP *.BAK *.S2C core
