tweak makefiles to (a) solve script directory bug, and (b) seem sensible
- tweak build process (especially generated scripts) for idempotency and transparency
- case in point: flush target Xmv
- per above, consistently default to invoking .../Xs2cc from makefiles
- allow parallelism in test/makefile target autotest
- flush target install-private (can use plain install) and modify README

--- a/cdecl/makefile
+++ b/cdecl/makefile
@@ -19,7 +19,7 @@ MISC = sizeof.c sch.sc README document load.sc
 
 SRCDIR = ../../cdecl
 
-SCC = ../scsc/s2cc
+SCC = ../scsc/Xs2cc
 
 .sc.c:
 	${SCC} -C $*.sc
