Do not build doc/r4rs.pdf
This requires LaTeX 209 backwards compatibility mode, aka latex209,
which is not available on most platforms.  To build invoke:
 make -C doc r4rs.pdf

--- a/doc/makefile
+++ b/doc/makefile
@@ -1,6 +1,9 @@
 # Makes the documentation files.
 
-pdfs = embedded.pdf index.pdf intro.pdf smithnotes.pdf r4rs.pdf
+pdfs = embedded.pdf index.pdf intro.pdf smithnotes.pdf
+# building r4rs.pdf requires latex209 which is not typically available,
+# so by default do not build/install it.
+#pdfs += r4rs.pdf
 all: $(pdfs)
 
 prefix=/usr/local
