--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Git: git://git.debian.org/git/collab-maint/scheme2c.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/scheme2c.git
 
 Package: scheme2c
-Architecture: i386 amd64 armel armhf
+Architecture: i386 amd64 armel armhf kfreebsd-i386
 Depends: ${shlibs:Depends}, ${misc:Depends}, libsigsegv-dev
 Description: Joel Bartlett's fabled Scheme->C system
  The original Scheme->C system, the first of its kind.  It conforms to
