--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,8 @@ else ifeq ($(arch),armel)
   S2C_ARCH = ARM
 else ifeq ($(arch),armhf)
   S2C_ARCH = ARM
+else ifeq ($(arch),kfreebsd-i386)
+  S2C_ARCH = OPENBSD
 else
   $(warning Warning: unsupported architecture $(arch))
   S2C_ARCH = UNSUPPORTED
