--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: debhelper (>= 9),
     texlive-fonts-recommended, ghostscript
 Standards-Version: 3.9.5
 Homepage: http://scheme2c.alioth.debian.org/
-Vcs-Git: git://git.debian.org/git/collab-maint/scheme2c.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/scheme2c.git
+Vcs-Git: git://anonscm.debian.org/collab-maint/scheme2c.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/scheme2c.git
 
 Package: scheme2c
 Architecture: i386 amd64 armel armhf kfreebsd-i386
