--- a/ports/AMD64/makefile-head
+++ b/ports/AMD64/makefile-head
@@ -4,7 +4,7 @@
 
 # Default flags to use when invoking the C compiler.
 
-CFLAGS = -march=native -Wall -O2 -finline-functions -fno-math-errno -frename-registers
+CFLAGS = -march=native -Wall -O2 -finline-functions -fno-math-errno -frename-registers -fno-strict-aliasing
 LDFLAGS = -lsigsegv
 CC = gcc
 
